--- a/downloads/mfis-pubs.bib
+++ b/downloads/mfis-pubs.bib
@@ -7,7 +7,112 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{DBLP:conf/fase/PonzioGRAAF21,
+  author    = {Pablo Ponzio and
+               Ariel Godio and
+               Nicol{\'{a}}s Rosner and
+               Marcelo Arroyo and
+               Nazareno Aguirre and
+               Marcelo F. Frias},
+  editor    = {Esther Guerra and
+               Mari{\"{e}}lle Stoelinga},
+  title     = {Efficient Bounded Model Checking of Heap-Manipulating Programs using
+               Tight Field Bounds},
+  booktitle = {Fundamental Approaches to Software Engineering - 24th International
+               Conference, {FASE} 2021, Held as Part of the European Joint Conferences
+               on Theory and Practice of Software, {ETAPS} 2021, Luxembourg City,
+               Luxembourg, March 27 - April 1, 2021, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12649},
+  pages     = {218--239},
+  publisher = {Springer},
+  year      = {2021},
+  url       = {https://doi.org/10.1007/978-3-030-71500-7\_11},
+  doi       = {10.1007/978-3-030-71500-7\_11},
+  timestamp = {Fri, 14 May 2021 08:34:15 +0200},
+  biburl    = {https://dblp.org/rec/conf/fase/PonzioGRAAF21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
+@article{DBLP:journals/corr/abs-2102-10152,
+  author    = {Guolong Zheng and
+               ThanhVu Nguyen and
+               Sim{\'{o}}n Guti{\'{e}}rrez Brida and
+               Germ{\'{a}}n Regis and
+               Marcelo F. Frias and
+               Nazareno Aguirre and
+               Hamid Bagheri},
+  title     = {{FLACK:} Counterexample-Guided Fault Localization for Alloy Models},
+  journal   = {CoRR},
+  volume    = {abs/2102.10152},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2102.10152},
+  archivePrefix = {arXiv},
+  eprint    = {2102.10152},
+  timestamp = {Wed, 24 Feb 2021 15:42:45 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2102-10152.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-2102-13569,
+  author    = {Facundo Molina and
+               Pablo Ponzio and
+               Nazareno Aguirre and
+               Marcelo F. Frias},
+  title     = {EvoSpex: An Evolutionary Algorithm for Learning Postconditions},
+  journal   = {CoRR},
+  volume    = {abs/2102.13569},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2102.13569},
+  archivePrefix = {arXiv},
+  eprint    = {2102.13569},
+  timestamp = {Tue, 02 Mar 2021 12:11:01 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2102-13569.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-2103-00327,
+  author    = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and
+               Germ{\'{a}}n Regis and
+               Guolong Zheng and
+               Hamid Bagheri and
+               ThanhVu Nguyen and
+               Nazareno Aguirre and
+               Marcelo F. Frias},
+  title     = {Bounded Exhaustive Search of Alloy Specification Repairs},
+  journal   = {CoRR},
+  volume    = {abs/2103.00327},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2103.00327},
+  archivePrefix = {arXiv},
+  eprint    = {2103.00327},
+  timestamp = {Thu, 04 Mar 2021 17:00:40 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2103-00327.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/dali/CassanoFAC20,
+  author    = {Valentin Cassano and
+               Raul Fervari and
+               Carlos Areces and
+               Pablo F. Castro},
+  editor    = {Manuel A. Martins and
+               Igor Sedl{\'{a}}r},
+  title     = {Default Modal Systems as Algebraic Updates},
+  booktitle = {Dynamic Logic. New Trends and Applications - Third International Workshop,
+               DaL{\'{\i}} 2020, Prague, Czech Republic, October 9-10, 2020,
+               Revised Selected Papers},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12569},
+  pages     = {103--119},
+  publisher = {Springer},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/978-3-030-65840-3\_7},
+  doi       = {10.1007/978-3-030-65840-3\_7},
+  timestamp = {Wed, 21 Apr 2021 08:53:38 +0200},
+  biburl    = {https://dblp.org/rec/conf/dali/CassanoFAC20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @inproceedings{DBLP:conf/jelia/CassanoFAC19,
 	Author = {Valentin Cassano and Raul Fervari and Carlos Areces and Pablo F. Castro},
